add common elements to parent tests pom. Now test specific projects will just declare a plan dependency and a profile per test. NEXUS-3816
git-svn-id: file:///opt/svn/repositories/sonatype.org/nexus/trunk@7281 2aa8b3fc-8ebb-4439-a84f-95066eaea8ab