@@ -21,78 +21,6 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.sonatype.plugins</groupId>
-        <artifactId>nexus-test-environment-maven-plugin</artifactId>
-      </plugin>
-      <plugin>
-        <artifactId>maven-dependency-plugin</artifactId>
-        <executions>
-          <execution>
-            <id>extract-test-plans</id>
-            <phase>pre-integration-test</phase>
-            <goals>
-              <goal>unpack-dependencies</goal>
-            </goals>
-            <configuration>
-             <includeArtifactIds>ui-welcome</includeArtifactIds>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-      <plugin>
-        <artifactId>maven-antrun-plugin</artifactId>
-        <executions>
-          <execution>
-            <id>jmeter-exec</id>
-            <phase>integration-test</phase>
-            <goals>
-              <goal>run</goal>
-            </goals>
-            <configuration>
-              <target>
-                <mkdir dir="${perf.result.dir}" />
-                <java fork="true" jar="${jmeter.home}/bin/ApacheJMeter.jar" failonerror="true">
-                  <jvmarg value="-Duser.dir=${jmeter.home}/bin" />
-                  <jvmarg value="-server" />
-                  <jvmarg
-                    line="-Xms756m -Xmx756m -XX:NewSize=256m -XX:MaxNewSize=256m -XX:SurvivorRatio=8 -XX:MaxTenuringThreshold=2 -XX:PermSize=192m -XX:MaxPermSize=192m" />
-                  <jvmarg value="-XX:+UseParallelGC" />
-                  <jvmarg value="-XX:+UseParallelOldGC" />
-                  <jvmarg value="-Dsun.rmi.dgc.client.gcInterval=600000" />
-                  <jvmarg value="-verbose:gc" />
-                  <jvmarg
-                    value="-Xloggc:${perf.result.dir}/gclog-${perf.data.id}.txt" />
-                  <!-- standard test plan properties -->
-                  <jvmarg value="-Dresult.dir=${perf.result.dir}" />
-                  <jvmarg value="-Ddata.dir=${perf.data.dir}" />
-                  <jvmarg value="-Ddata.id=${perf.data.id}" />
-                  <jvmarg value="-Dnexus.port=${nexus-application-port}" />
-                  <jvmarg value="-Dnexus.host=${nexus.host}" />
-                  <jvmarg value="-Dnexus.protocol=${nexus.protocol}" />
-                  <jvmarg value="-Dnexus.context=${nexus.context}" />
-                  <!-- nongui -->
-                  <arg value="-n" />
-                  <!--  test plan jmx -->
-                  <arg value="-t" />
-                  <arg path="${jmeter.test.file}" />
-                  <!-- performance log file -->
-                  <arg value="-l" />
-                  <arg path="${jmeter.log.file}" />
-                  <!-- jmeter.log -->
-                  <arg value="-j" />
-                  <arg path="${jmeter.runlog.file}" />
-                </java>
-              </target>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-
-    </plugins>
-  </build>
   <profiles>
     <profile>
       <id>example-1</id>
